// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a banner that has basic information 1`] = `
<DemographicsBannerDisplay
  administrativeSex={
    Object {
      "ariaLabel": "Female",
      "isBirthSexMismatch": false,
      "value": "F",
    }
  }
  administrativeSexFullText="Administrative Sex"
  age={
    Object {
      "ariaLabel": "24 Years Old.",
      "value": "24",
    }
  }
  applicationContent={null}
  dateOfBirth={
    Object {
      "ariaLabel": "March 30, 2017",
      "value": "March 30, 2017",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gestationalAge={Object {}}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName="Terra Demographics Banner"
  postMenstrualAge={Object {}}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName={null}
  sexMismatchFullText="The documented sex values are not identical."
/>
`;

exports[`renders a blank banner properly 1`] = `
<DemographicsBannerDisplay
  administrativeSex={Object {}}
  administrativeSexFullText="Administrative Sex"
  age={Object {}}
  applicationContent={null}
  dateOfBirth={Object {}}
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gestationalAge={Object {}}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName=""
  postMenstrualAge={Object {}}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName={null}
  sexMismatchFullText="The documented sex values are not identical."
/>
`;

exports[`renders gestational date with a default label when the label is not provided 1`] = `
<DemographicsBannerDisplay
  administrativeSex={Object {}}
  administrativeSexFullText="Administrative Sex"
  age={Object {}}
  applicationContent={null}
  dateOfBirth={Object {}}
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gestationalAge={
    Object {
      "ariaLabel": "April 5, 2016",
      "value": "April 5, 2016",
    }
  }
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName=""
  postMenstrualAge={Object {}}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName={null}
  sexMismatchFullText="The documented sex values are not identical."
/>
`;

exports[`renders post menstrural date with a default label when the label is not provided 1`] = `
<DemographicsBannerDisplay
  administrativeSex={Object {}}
  administrativeSexFullText="Administrative Sex"
  age={Object {}}
  applicationContent={null}
  dateOfBirth={Object {}}
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gestationalAge={Object {}}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName=""
  postMenstrualAge={
    Object {
      "ariaLabel": "April 5, 2016",
      "value": "April 5, 2016",
    }
  }
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName={null}
  sexMismatchFullText="The documented sex values are not identical."
/>
`;

exports[`renders the banner appropriately for a deceased person 1`] = `
<DemographicsBannerDisplay
  administrativeSex={
    Object {
      "ariaLabel": "Female",
      "isBirthSexMismatch": false,
      "value": "F",
    }
  }
  administrativeSexFullText="Administrative Sex"
  age={
    Object {
      "ariaLabel": "24 Years Old.",
      "value": "24",
    }
  }
  applicationContent={null}
  dateOfBirth={
    Object {
      "ariaLabel": "June 15, 2014",
      "value": "June 15, 2014",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={
    Object {
      "ariaLabel": "March 30, 2017",
      "value": "March 30, 2017",
    }
  }
  deceasedDateLabel="Deceased"
  gestationalAge={Object {}}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName="Old Terra Demographics Banner"
  postMenstrualAge={Object {}}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName={null}
  sexMismatchFullText="The documented sex values are not identical."
/>
`;

exports[`renders the banner appropriately for a person with gestational and post menstrual dates 1`] = `
<DemographicsBannerDisplay
  administrativeSex={
    Object {
      "ariaLabel": "Male",
      "isBirthSexMismatch": false,
      "value": "Male",
    }
  }
  administrativeSexFullText="Administrative Sex"
  age={
    Object {
      "ariaLabel": "25 Years Old.",
      "value": "25 Years",
    }
  }
  applicationContent={
    <span
      className="risk-score"
    >
      5%
    </span>
  }
  dateOfBirth={
    Object {
      "ariaLabel": "May 9, 1993",
      "value": "May 9, 1993",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gestationalAge={
    Object {
      "ariaLabel": "April 5, 2016",
      "value": "April 5, 2016",
    }
  }
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  identifiers={
    Array [
      Object {
        "ariaLabel": "MRN 1 2 3 4 5",
        "label": "MRN",
        "value": "12343",
      },
      Object {
        "ariaLabel": "R E A 3JSDA",
        "label": "REA",
        "value": "3JSDA",
      },
    ]
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName="Johnathon Doe"
  photo=""
  postMenstrualAge={
    Object {
      "ariaLabel": "April 7, 2016",
      "value": "April 7, 2016",
    }
  }
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName="John"
  sexMismatchFullText="The documented sex values are not identical."
/>
`;

exports[`renders the banner properly for a deceased person with additional application content 1`] = `
<DemographicsBannerDisplay
  administrativeSex={
    Object {
      "ariaLabel": "Male",
      "isBirthSexMismatch": false,
      "value": "Male",
    }
  }
  administrativeSexFullText="Administrative Sex"
  age={
    Object {
      "ariaLabel": "25 Years Old.",
      "value": "25 Years",
    }
  }
  applicationContent={
    <span
      className="risk-score"
    >
      5%
    </span>
  }
  dateOfBirth={
    Object {
      "ariaLabel": "May 9, 1993",
      "value": "May 9, 1993",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={
    Object {
      "ariaLabel": "March 5, 2016",
      "value": "March 5, 2016",
    }
  }
  deceasedDateLabel="Deceased"
  gestationalAge={Object {}}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  identifiers={
    Array [
      Object {
        "ariaLabel": "MRN 1 2 3 4 5",
        "label": "MRN",
        "value": "12343",
      },
      Object {
        "ariaLabel": "R E A 3JSDA",
        "label": "REA",
        "value": "3JSDA",
      },
    ]
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName="Johnathon Doe"
  photo=""
  postMenstrualAge={Object {}}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName="John"
  sexMismatchFullText="The documented sex values are not identical."
/>
`;

exports[`renders the banner that contains additional information 1`] = `
<DemographicsBannerDisplay
  administrativeSex={
    Object {
      "ariaLabel": "Male",
      "isBirthSexMismatch": false,
      "value": "Male",
    }
  }
  administrativeSexFullText="Administrative Sex"
  age={
    Object {
      "ariaLabel": "25 Years Old.",
      "value": "25 Years",
    }
  }
  applicationContent={
    <span
      className="risk-score"
    >
      5%
    </span>
  }
  dateOfBirth={
    Object {
      "ariaLabel": "May 9, 1993",
      "value": "May 9, 1993",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gestationalAge={Object {}}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  identifiers={
    Array [
      Object {
        "ariaLabel": "MRN 1 2 3 4 5",
        "label": "MRN",
        "value": "12343",
      },
      Object {
        "ariaLabel": "R E A 3JSDA",
        "label": "REA",
        "value": "3JSDA",
      },
    ]
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={false}
  isSelectable={false}
  personName="Johnathon Doe"
  photo=""
  postMenstrualAge={Object {}}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName="John"
  sexMismatchFullText="The documented sex values are not identical."
/>
`;

exports[`renders the banner with confidential icon 1`] = `
<DemographicsBannerDisplay
  administrativeSex={
    Object {
      "ariaLabel": "Male",
      "isBirthSexMismatch": false,
      "value": "Male",
    }
  }
  administrativeSexFullText="Administrative Sex"
  age={
    Object {
      "ariaLabel": "25 Years Old.",
      "value": "25 Years",
    }
  }
  applicationContent={
    <span
      className="risk-score"
    >
      5%
    </span>
  }
  dateOfBirth={
    Object {
      "ariaLabel": "May 9, 1993",
      "value": "May 9, 1993",
    }
  }
  dateOfBirthFullText="Date of Birth"
  dateOfBirthLabel="DOB"
  deceasedDate={Object {}}
  deceasedDateLabel="Deceased"
  gestationalAge={Object {}}
  gestationalAgeFullText="Gestational Age"
  gestationalAgeLabel="GA"
  identifiers={
    Array [
      Object {
        "ariaLabel": "MRN 1 2 3 4 5",
        "label": "MRN",
        "value": "12343",
      },
      Object {
        "ariaLabel": "R E A 3JSDA",
        "label": "REA",
        "value": "3JSDA",
      },
    ]
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isActive={false}
  isConfidential={true}
  isSelectable={false}
  personName="Johnathon Doe"
  postMenstrualAge={Object {}}
  postMenstrualAgeFullText="Post Menstrual Age"
  postMenstrualAgeLabel="PMA"
  preferredFirstName="John"
  sexMismatchFullText="The documented sex values are not identical."
/>
`;
